--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="icon" type="image/svg+xml" href="/logo-dark.jpg" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Öyrən və öyrət</title>
   </head>
   <body>
